src/objects/Income_and_Expense__c.object
<CustomObject>
    <description>XLR8 custom object which tracks the Annual Income, Annual Expense and Anticipated Expenses for a given client.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Of_Date__c</fullName>
        <label>As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Income and Expenses</relationshipLabel>
        <relationshipName>Income_and_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Registration__c</fullName>
        <label>Owner Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pct_Annual_Increase__c</fullName>
        <label>% Annual Increase</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Income and Expenses</relationshipLabel>
        <relationshipName>Income_and_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_How_Often__c</fullName>
        <inlineHelpText>Indicate the number of years.  Example:  5 would represent it recurring every 5 years.</inlineHelpText>
        <label>Recurring How Often?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Income and Expenses (Secondary Owner)</relationshipLabel>
        <relationshipName>Income_and_Expenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annuity Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child&apos;s Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Tax Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inheritance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifestyle Asset Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Expenses Post-Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Expenses Pre-Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Vehicle Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Property Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Income Stream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel or Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Distribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_Expected_to_be_Incurred__c</fullName>
        <label>Year Expected to be Incurred</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_to_Continue__c</fullName>
        <label>Years to Continue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Income and Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Entity__c</columns>
        <columns>Amount__c</columns>
        <columns>As_Of_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IE-{0000}</displayFormat>
        <label>Income/Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income and Expenses</pluralLabel>
    <recordTypes>
        <fullName>Anticipated_Expenses</fullName>
        <active>true</active>
        <description>All anticipated expenses</description>
        <label>Anticipated Expenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expense</fullName>
        <active>true</active>
        <description>Annual expenses excluding mortgage repayments and insurance premiums.</description>
        <label>Expense</label>
    </recordTypes>
    <recordTypes>
        <fullName>Income</fullName>
        <active>true</active>
        <description>Annual Income records, excluding salary but including Partnerships, trusts, pensions, annuities, Social Security, Other Income, Ad hoc payments or inheritance proceeds.</description>
        <label>Income</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>